refactor: simplify await runtime