@@ -3,7 +3,6 @@ package io.github.gromoff97.awium.conditioning.runtime;
 import io.github.gromoff97.awium.conditioning.Evaluation;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.function.Function;
 
@@ -16,15 +15,14 @@ final class CaughtEvaluator<S, R>
 
     private final List<Stage<S, R>> stages;
     private final ArrayList<R> results = new ArrayList<>();
-    private int next;
 
     CaughtEvaluator(List<Stage<S, R>> stages) {
-        this.stages = Collections.unmodifiableList(new ArrayList<>(stages));
+        this.stages = List.copyOf(stages);
     }
 
     @Override
     public Evaluation<List<R>> apply(S actual) {
-        int current = Math.min(next, stages.size() - 1);
+        int current = Math.min(results.size(), stages.size() - 1);
         Evaluation<? extends R> evaluation;
         try {
             evaluation = stages.get(current).evaluator().apply(actual);
@@ -34,21 +32,19 @@ final class CaughtEvaluator<S, R>
             return Evaluation.<List<R>>uncontrolled(failure).withContext(context(current));
         }
         if (evaluation == null) {
-            return Evaluation.<List<R>>uncontrolled(new NullPointerException(
-                    "condition returned null Evaluation")).withContext(context(current));
+            return Evaluation.<List<R>>uncontrolled(new NullPointerException("condition returned null Evaluation")).withContext(context(current));
         }
         Evaluation<? extends R> contextual = evaluation.withContext(context(current));
-        return next == stages.size()
+        return results.size() == stages.size()
                 ? contextual.continueIfSatisfied(this::replaceLast)
                 : contextual.continueIfSatisfied(result -> capture(result, current));
     }
 
     private Evaluation<List<R>> capture(R result, int evaluated) {
         results.add(result);
-        if (++next < stages.size()) {
-            return Evaluation.<List<R>>unsatisfied(
-                    "waiting for sequence stage " + (next + 1)).withContext(
-                            context(next, evaluated));
+        if (results.size() < stages.size()) {
+            return Evaluation.<List<R>>unsatisfied("waiting for sequence stage " + (results.size() + 1))
+                    .withContext(context(results.size(), evaluated));
         }
         return satisfied(resultCopy());
     }
@@ -59,7 +55,7 @@ final class CaughtEvaluator<S, R>
     }
 
     private List<R> resultCopy() {
-        return Collections.unmodifiableList(new ArrayList<>(results));
+        return results.stream().toList();
     }
 
     private Evaluation.Context.Sequence context(int stage) {
